--- a/backend/majors/AST.yaml
+++ b/backend/majors/AST.yaml
@@ -109,23 +109,23 @@ req_list:
   min_needed: 1
   max_counted: 1
   explanation: |-
-    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
+    <p><i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i></p>
     
-    In addition to the coursework completed during junior year, each student carries out two junior independent research projects, one each semester. Each project examines a research topic of current interest, carried out under close supervision of a faculty adviser who is doing research in this area. The student will complete each term's independent work by submitting a written paper. The research projects can involve data analysis using astronomical data from our telescopes, including data from the Sloan Digital Sky Survey — a unique three-dimensional map of the universe — and the Hyper Suprime-Cam Survey with the Subaru telescope, as well as data from other national and international facilities such as the Hubble Space Telescope. Similarly, theoretical and computational projects in astrophysics are available. The topics, to be selected jointly by the student and their adviser, can range from areas such as cosmology and the early universe, to galaxy formation, to large-scale structure of the universe, quasars, black holes, stars, extra-solar planets, high-energy astrophysics and plasma astrophysics. Interdisciplinary projects, including astronomy and education, science policy, planetary science, astrobiology, space science exploration and more are possible.
+    <p>In addition to the coursework completed during junior year, each student carries out two junior independent research projects, one each semester. Each project examines a research topic of current interest, carried out under close supervision of a faculty adviser who is doing research in this area. The student will complete each term's independent work by submitting a written paper. The research projects can involve data analysis using astronomical data from our telescopes, including data from the Sloan Digital Sky Survey — a unique three-dimensional map of the universe — and the Hyper Suprime-Cam Survey with the Subaru telescope, as well as data from other national and international facilities such as the Hubble Space Telescope. Similarly, theoretical and computational projects in astrophysics are available. The topics, to be selected jointly by the student and their adviser, can range from areas such as cosmology and the early universe, to galaxy formation, to large-scale structure of the universe, quasars, black holes, stars, extra-solar planets, high-energy astrophysics and plasma astrophysics. Interdisciplinary projects, including astronomy and education, science policy, planetary science, astrobiology, space science exploration and more are possible.</p>
   no_req:
 - name: Senior Thesis
   min_needed: 1
   max_counted: 1
   explanation: |-
-    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
+    <p><i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i></p>
     
-    In senior year, in addition to coursework, students must carry out an extensive research project with a faculty adviser for their senior thesis. The thesis is completed by submitting a final written paper summarizing the work. There is a wide range of observational and theoretical topics available, including interdisciplinary projects as discussed above. The senior thesis work is frequently published as part of a scientific paper in an astrophysical journal. After the thesis has been completed and read by the adviser and an additional faculty member, the student presents an oral summary of the work, followed by an oral defense of the thesis.
+    <p>In senior year, in addition to coursework, students must carry out an extensive research project with a faculty adviser for their senior thesis. The thesis is completed by submitting a final written paper summarizing the work. There is a wide range of observational and theoretical topics available, including interdisciplinary projects as discussed above. The senior thesis work is frequently published as part of a scientific paper in an astrophysical journal. After the thesis has been completed and read by the adviser and an additional faculty member, the student presents an oral summary of the work, followed by an oral defense of the thesis.</p>
   no_req:
 - name: Senior Departmental Examination
   min_needed: 1
   max_counted: 1
   explanation: |-
-    <i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
+    <p><i>Editor's Note: Majors do not enroll in any numbered course for this requirement, so Compass does not check it.</i></p>
     
-    The thesis work and the oral defense, combined with a brief oral examination on general topics in astrophysics, constitute the senior departmental examination.
+    <p>The thesis work and the oral defense, combined with a brief oral examination on general topics in astrophysics, constitute the senior departmental examination.</p>
   no_req:
