--- a/backend/majors/SPA.yaml
+++ b/backend/majors/SPA.yaml
@@ -160,7 +160,7 @@ req_list:
       - ANT 5**
   - name: Creative Arts Track
     min_needed: 1
-    max_counted: ALL
+    max_counted: 1
     explanation: |-
       Major in Spanish or Portuguese with the creative arts (e.g., creative writing, theater, visual arts, translation). Requires a combination of five upper-division courses in Spanish or Portuguese and three upper-division courses in the creative arts. One of the five upper-division courses in Spanish or Portuguese may be taken in English, in which case all written work must be completed in the target language.
     req_list:
