--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@types/react": "18.2.45",
     "@types/react-dom": "^18.2.17",
     "clsx": "^2.0.0",
+    "daisyui": "^4.10.1",
     "date-fns": "^3.6.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
