--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false, // TODO: Let's be true TS champs and make this true eventually --windsor
+    "strict": true, // TODO: Let's be true TS champs and make this true eventually --windsor
     "noImplicitAny": false,
     "noEmit": true,
     "esModuleInterop": true,
