--- a/backend/degrees/AB.yaml
+++ b/backend/degrees/AB.yaml
@@ -63,70 +63,75 @@ req_list:
   - LANG 3**
   - LANG 4**
   - LANG 5**
-- name: Culture and Difference
+- name: Distribution Requirements
   max_counted: 1
-  min_needed: 1
+  min_needed: ALL
   explanation: |-
-      The requirement in Culture and Difference begins with the premise that human beings experience the world through their respective cultures — the ideas, meanings, norms, and habituations — that are represented in the arts and literature, laws and institutions, and social practices of human societies whose histories and power relationships often differ from one another.  Found across a wide range of disciplines, these courses use cultural analysis to trace the ways in which human beings construct meaning both within and across groups. Culture and Difference courses offer students a lens through which other forms of disciplinary inquiry are enhanced, critiqued, and clarified, often paying close attention to the experiences and perspectives of groups who have historically been excluded from dominant cultural narratives or structures of social power. The requirement in Culture and Difference is the only requirement that may be satisfied either independently or concurrently with another distribution area.
-  double_counting_allowed: true
-  dist_req: CD
-- name: Epistemology and Cognition
-  max_counted: 1
-  min_needed: 1
-  explanation: |-
-    Courses in Epistemology and Cognition address the nature and limits of human knowledge.  The cognitive sciences and related fields study human reasoning as it is. Epistemology — the philosophical theory of knowledge — studies human reasoning as it ought to be.  Both areas of inquiry focus simultaneously on the manifold sources of human knowledge and on the many ways in which human reasoning can be distorted or undermined. Courses in this group are offered in a number of departments, but share the common goal of encouraging students to reflect on the linguistic, psychological, and cultural structures that make knowledge possible. Individual departments may also offer courses in disciplinary “ways of knowing” that invite students to consider the epistemological assumptions and methodological principles that inform research in their fields.
-  dist_req: EC
-- name: Ethical Thought and Moral Values
-  max_counted: 1
-  min_needed: 1
-  explanation: |-
-    Human beings often disagree about matters of right and wrong, and about how we ought to organize our lives together. The ethical and moral conclusions we reach, however, are not mere matters of opinion. Ethical decisions emerge from fundamental ideas about the nature and possibility of the “good,” our duties and obligations to one another, our aspirations for a virtuous and meaningful life, and the demands of justice.  These ideas, often shaped by ancient traditions of religion and culture, guide the moral questions we ask and the conclusions we reach. Courses in Ethical Thought and Moral Values equip students to understand the basis of their own moral reasoning and ethical issues as they arise in social life, while also cultivating the possibility of a common ethical language among people whose traditions and values differ.
-  dist_req: EM
-- name: Historical Analysis
-  max_counted: 1
-  min_needed: 1
-  explanation: |-
-    Historical analysis invites students to enter imaginatively into languages, institutions, and worldviews of the past.  It grounds us in the awareness that human life and culture are thousands of years old, and that the world we experience in the present is only a fraction of all that it ever was.  Fundamental to historical analysis is the study of change over time:  why and how did cities rise and fall, technologies develop, social roles transform?  Because we can never directly experience the past, historical analysis depends on the subjective selection and interpretation of texts, artifacts, and other evidence, and from the same evidence many different stories can often be told. Historical analysis requires students to make critical judgments about the conclusions we can draw from the traces of the past to which we have access.
-  dist_req: HA
-- name: Literature and the Arts
-  max_counted: 1
-  min_needed: 2
-  explanation: |-
-    Human beings have always used imagination to create reflections and representations of ourselves and our world, from cave paintings to symphonies to video games. In making these artistic or imaginative representations, we express ideas about our own nature and investigate the nature of the world around us, often in ways that push at the boundaries of what can be said in ordinary language. In courses in Literature and the Arts, students may produce creative, imaginative works or practice interpreting them. For example, they may choreograph dances or read Shakespeare's plays or create performance pieces that use imaginative and interpretive skills critically and physically. The skill of “close reading” is especially important in this area of inquiry: what can we learn from careful attention to the precise words, colors, or tones that an artist has chosen?
-  dist_req: LA
-- name: Social Analysis
-  max_counted: 1
-  min_needed: 2
-  explanation: |-
-    Social analysis involves the study of the structures, processes, and meanings human beings create through our interactions with one another, and the networks and institutions through which human behavior develops and evolves. The codes and narratives we share with others, often unspoken, produce our sense of “the normal” and structure our thought and behavior. These components of social life are accessible through both quantitative methods, which involve the statistical analysis of data, and qualitative methods, which rely on the interpretation of data gathered through observation and interaction.  Social analysis enables us to make sense of the social structures and processes that shape individual lives, to understand the role of institutions — such as the family, government, schools, and labor markets — in society, and to define and respond to social problems, such as inequality and violence.
-  dist_req: SA
-- name: Quantitative and Computational Reasoning
-  max_counted: 1
-  min_needed: 1
-  explanation: |-
-    Quantitative and computational reasoning engages students in the logic of mathematics and the manipulation of numerical and categorical information.  Quantitative reasoning asks us to describe and predict things that can be measured or counted such as population, speed, or cost. Computational thinking informs the underlying structures of the codes and algorithms created in computer science. Quantitative and computational reasoning is used to some degree in almost every area of learning.  A strong foundation in quantitative reasoning helps students think clearly and apply quantitative methods to a wide range of projects, and equips them to critically evaluate statistical claims.
-  dist_req:
-  - QR
-  - QCR
-- name: Science and Engineering
-  max_counted: 1
-  min_needed: 2
-  explanation: |-
-    Science and engineering encompass the study of the natural and constructed worlds, their impact on humanity, and the human impact on them. These disciplines teach principles, methods, and systematic thinking, how to innovate theories and methodologies, how to test hypotheses and prototypes by analyzing data while managing uncertainty, and how to enhance the built world through creativity and design. Fundamental to science and engineering are the methods and habits of mind in which models are developed, critiqued, and refined, thereby enriching and expanding our ways of understanding — and fascination with — the natural and constructed environments, and our own positions within them. 
-    At least one course must be a science and engineering course with
-    laboratory (SEL). Students may elect a second laboratory science course, or a nonlaboratory science course (SEN).
+    All students in the A.B. program must complete courses in each distribution area in their eight terms of study. The distribution areas are: Culture and Difference (CD) Epistemology and Cognition (EC); Ethical Thought and Moral Values (EM); Historical Analysis (HA); Literature and the Arts (LA); Social Analysis (SA); Quantitative and Computational Reasoning (QCR); and Science and Engineering (SE). For Science and Engineering, at least one course must be a laboratory course (SEL). Students may elect a second laboratory science course, or a nonlaboratory science course (SEN).
   req_list:
-  - name: Science and Engineering with Lab
-    max_counted: 2
-    min_needed: 1
-    explanation: Science and Engineering with Lab (SEL)
-    dist_req:
-    - STL
-    - SEL
-  - name: Science and Engineering without Lab
+  - name: Culture and Difference
     max_counted: 1
     min_needed: 1
-    explanation: Science and Engineering without Lab (SEN)
+    explanation: |-
+        The requirement in Culture and Difference begins with the premise that human beings experience the world through their respective cultures — the ideas, meanings, norms, and habituations — that are represented in the arts and literature, laws and institutions, and social practices of human societies whose histories and power relationships often differ from one another.  Found across a wide range of disciplines, these courses use cultural analysis to trace the ways in which human beings construct meaning both within and across groups. Culture and Difference courses offer students a lens through which other forms of disciplinary inquiry are enhanced, critiqued, and clarified, often paying close attention to the experiences and perspectives of groups who have historically been excluded from dominant cultural narratives or structures of social power. The requirement in Culture and Difference is the only requirement that may be satisfied either independently or concurrently with another distribution area.
+    dist_req: CD
+  - name: Epistemology and Cognition
+    max_counted: 1
+    min_needed: 1
+    explanation: |-
+      Courses in Epistemology and Cognition address the nature and limits of human knowledge.  The cognitive sciences and related fields study human reasoning as it is. Epistemology — the philosophical theory of knowledge — studies human reasoning as it ought to be.  Both areas of inquiry focus simultaneously on the manifold sources of human knowledge and on the many ways in which human reasoning can be distorted or undermined. Courses in this group are offered in a number of departments, but share the common goal of encouraging students to reflect on the linguistic, psychological, and cultural structures that make knowledge possible. Individual departments may also offer courses in disciplinary “ways of knowing” that invite students to consider the epistemological assumptions and methodological principles that inform research in their fields.
+    dist_req: EC
+  - name: Ethical Thought and Moral Values
+    max_counted: 1
+    min_needed: 1
+    explanation: |-
+      Human beings often disagree about matters of right and wrong, and about how we ought to organize our lives together. The ethical and moral conclusions we reach, however, are not mere matters of opinion. Ethical decisions emerge from fundamental ideas about the nature and possibility of the “good,” our duties and obligations to one another, our aspirations for a virtuous and meaningful life, and the demands of justice.  These ideas, often shaped by ancient traditions of religion and culture, guide the moral questions we ask and the conclusions we reach. Courses in Ethical Thought and Moral Values equip students to understand the basis of their own moral reasoning and ethical issues as they arise in social life, while also cultivating the possibility of a common ethical language among people whose traditions and values differ.
+    dist_req: EM
+  - name: Historical Analysis
+    max_counted: 1
+    min_needed: 1
+    explanation: |-
+      Historical analysis invites students to enter imaginatively into languages, institutions, and worldviews of the past.  It grounds us in the awareness that human life and culture are thousands of years old, and that the world we experience in the present is only a fraction of all that it ever was.  Fundamental to historical analysis is the study of change over time:  why and how did cities rise and fall, technologies develop, social roles transform?  Because we can never directly experience the past, historical analysis depends on the subjective selection and interpretation of texts, artifacts, and other evidence, and from the same evidence many different stories can often be told. Historical analysis requires students to make critical judgments about the conclusions we can draw from the traces of the past to which we have access.
+    dist_req: HA
+  - name: Literature and the Arts
+    max_counted: 1
+    min_needed: 2
+    explanation: |-
+      Human beings have always used imagination to create reflections and representations of ourselves and our world, from cave paintings to symphonies to video games. In making these artistic or imaginative representations, we express ideas about our own nature and investigate the nature of the world around us, often in ways that push at the boundaries of what can be said in ordinary language. In courses in Literature and the Arts, students may produce creative, imaginative works or practice interpreting them. For example, they may choreograph dances or read Shakespeare's plays or create performance pieces that use imaginative and interpretive skills critically and physically. The skill of “close reading” is especially important in this area of inquiry: what can we learn from careful attention to the precise words, colors, or tones that an artist has chosen?
+    dist_req: LA
+  - name: Social Analysis
+    max_counted: 1
+    min_needed: 2
+    explanation: |-
+      Social analysis involves the study of the structures, processes, and meanings human beings create through our interactions with one another, and the networks and institutions through which human behavior develops and evolves. The codes and narratives we share with others, often unspoken, produce our sense of “the normal” and structure our thought and behavior. These components of social life are accessible through both quantitative methods, which involve the statistical analysis of data, and qualitative methods, which rely on the interpretation of data gathered through observation and interaction.  Social analysis enables us to make sense of the social structures and processes that shape individual lives, to understand the role of institutions — such as the family, government, schools, and labor markets — in society, and to define and respond to social problems, such as inequality and violence.
+    dist_req: SA
+  - name: Quantitative and Computational Reasoning
+    max_counted: 1
+    min_needed: 1
+    explanation: |-
+      Quantitative and computational reasoning engages students in the logic of mathematics and the manipulation of numerical and categorical information.  Quantitative reasoning asks us to describe and predict things that can be measured or counted such as population, speed, or cost. Computational thinking informs the underlying structures of the codes and algorithms created in computer science. Quantitative and computational reasoning is used to some degree in almost every area of learning.  A strong foundation in quantitative reasoning helps students think clearly and apply quantitative methods to a wide range of projects, and equips them to critically evaluate statistical claims.
     dist_req:
-    - STN
-    - SEN
+    - QR
+    - QCR
+  - name: Science and Engineering
+    max_counted: 1
+    min_needed: 2
+    explanation: |-
+      Science and engineering encompass the study of the natural and constructed worlds, their impact on humanity, and the human impact on them. These disciplines teach principles, methods, and systematic thinking, how to innovate theories and methodologies, how to test hypotheses and prototypes by analyzing data while managing uncertainty, and how to enhance the built world through creativity and design. Fundamental to science and engineering are the methods and habits of mind in which models are developed, critiqued, and refined, thereby enriching and expanding our ways of understanding — and fascination with — the natural and constructed environments, and our own positions within them. 
+      At least one course must be a science and engineering course with
+      laboratory (SEL). Students may elect a second laboratory science course, or a nonlaboratory science course (SEN).
+    req_list:
+    - name: Science and Engineering with Lab
+      max_counted: 2
+      min_needed: 1
+      explanation: Science and Engineering with Lab (SEL)
+      dist_req:
+      - STL
+      - SEL
+    - name: Science and Engineering without Lab
+      max_counted: 1
+      min_needed: 1
+      explanation: Science and Engineering without Lab (SEN)
+      dist_req:
+      - STN
+      - SEN
